Bug 111493 - In the game The Surge (378540) - textures disappear then appear again when I change the camera angle view
Summary: In the game The Surge (378540) - textures disappear then appear again when I ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: not set not set
Assignee: Ian Romanick
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks: mesa-19.2
  Show dependency treegraph
 
Reported: 2019-08-26 21:31 UTC by mikhail.v.gavrilov
Modified: 2019-09-02 17:03 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description mikhail.v.gavrilov 2019-08-26 21:31:54 UTC
In the game The Surge (378540) - textures disappear then appear again when I change the camera angle view

Demonstration: https://youtu.be/H7zpzP_I4c0

RenderDoc capture: https://mega.nz/#F!8sxRAAwB!grDWL3_PJdsU5bxSd9uhCg

Tested on Mesa 19.2 and mesa git.
Comment 1 Samuel Pitoiset 2019-08-27 06:46:05 UTC
I can reproduce this, is this something recent for you? I think that game used to work in the past.
Comment 2 Samuel Pitoiset 2019-08-27 07:06:24 UTC
Works perfectly fine with Mesa 19.1.5.
Comment 3 Samuel Pitoiset 2019-08-27 07:35:46 UTC
5544b2cbbd23df82192aea09d909b5cc2c1f1af9 is the first bad commit
commit 5544b2cbbd23df82192aea09d909b5cc2c1f1af9
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Tue Jan 23 17:35:51 2018 +0800

    nir/algebraic: Use value range analysis to eliminate useless unary ops
    
    Sandy Bridge is the big winner because it lies at something of a
    crossroads.  It supports a fairly high OpenGL version, and it still has
    the old style math box.  The high OpenGL version means a lot more
    shaders can run on it.  The old style math box means extra moves are
    necessary to resolve source modifiers on operands to complex math
    instructions like COS, SQRT, and RCP.
Comment 4 Ian Romanick 2019-08-30 19:28:30 UTC
This is almost certainly a dup of https://bugs.freedesktop.org/show_bug.cgi?id=111490, but I'm going to wait a bit to close it as such.
Comment 5 Ian Romanick 2019-08-31 22:25:18 UTC
Can you try the second patch (the one with is_used_once in the description) from bug #111490?
Comment 6 James B 2019-09-01 19:46:47 UTC
I built mesa 09705747d727d2ec48a6c4af8206ec3411dec127 with and without the patch and in both cases the bug appears fixed.
Comment 8 Ian Romanick 2019-09-02 17:03:30 UTC
(In reply to Ian Romanick from comment #4)
> This is almost certainly a dup of
> https://bugs.freedesktop.org/show_bug.cgi?id=111490, but I'm going to wait a
> bit to close it as such.

Yes... Samuel was on top of this, and I think I was confusing this with a different bug.  Oops.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.